fixed overlap issue when screen is turned on mobile view. see desc
added a margin-bottom- this seems to fix the overlap issue. however on page load , if the screen is already turned the project-btn is out of view and scrolling is required.

--- a/css/base.css
+++ b/css/base.css
@@ -74,7 +74,7 @@ body{
 	height: 100vh;
 	background-size: 100% 100%;
 	background: transparent;
-	
+	margin-bottom:350px;
 	
 
 	
